--- a/Index.html
+++ b/Index.html
@@ -335,7 +335,7 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="contact-text">
-                            <p><a href="mailto:Schoolofnursing10@gmail.com">Schoolofnursing10@gmail.com</a></p>
+                            <p><a href="mailto:Americancollegeatp@gmail.com">Americancollegeatp@gmail.com</a></p>
                         </div>
                     </div>
                     
@@ -409,7 +409,7 @@
                     <h3>Contact Us</h3>
                     <p><i class="fas fa-phone"></i> <a href="tel:9989953273">9989953273</a></p>
                     <p><i class="fas fa-phone"></i> <a href="tel:7013370612">7013370612</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:Schoolofnursing10@gmail.com">Schoolofnursing10@gmail.com</a></p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:Americancollegeatp@gmail.com">Americancollegeatp@gmail.com</a></p>
                 </div>
             </div>
             
