--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANC Nursing College - Excellence in Healthcare Education</title>
+    <title>ANC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="static/index.css">
@@ -13,8 +13,8 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="images/ANC logo.png" alt="ANC Logo">
-                    <h1><a href="#home">ANC Nursing College</a></h1>
+                    <img src="images/ANC_logo.png" alt="ANC Logo">
+                    <h1><a href="#home">American Nursing College</a></h1>
                 </div>
                 <div class="mobile-toggle" id="mobileToggle">
                     <i class="fas fa-bars"></i>
@@ -360,7 +360,14 @@
                 </div>
                 
                 <div class="contact-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.188722346197!2d78.39!3d17.45!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTfCsDI3JzAwLjAiTiA3OMKwMjMnMjQuMCJF!5e0!3m2!1sen!2sin!4v1651234567890!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.026693387162!2d77.5627286!3d14.680629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb14acaafe65bd7%3A0xb594966a4f158988!2sAmerican%20College%20Of%20Nursing!5e0!3m2!1sen!2sin!4v1689078357642!5m2!1sen!2sin" 
+                        width="100%" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy">
+                    </iframe>
                 </div>
             </div>
         </div>
