--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text" data-aos="fade-right">
-                    <h2>About American College of Nursing</h2>
+                    <h2>About </h2>
+                    <h2>American College of Nursing</h2>
                     <p>Shaping healthcare professionals with excellence, ethics, and expertise since 1988.</p>
                     <p>American College of Nursing is a premier institution dedicated to providing exceptional education and practical training for aspiring healthcare professionals. With state-of-the-art facilities and experienced faculty, we prepare our students to excel in the dynamic field of healthcare.</p>
                     <p>Our comprehensive curriculum combines theoretical knowledge with hands-on experience, ensuring graduates are well-equipped to meet the challenges of modern healthcare environments and make meaningful contributions to patient care.</p>
@@ -164,7 +165,7 @@
                         <div class="feature-list">
                             <div class="feature-item">
                                 <i class="fas fa-award"></i>
-                                <span>NAAC Accredited Programs</span>
+                                <span>INC Accredited Programs</span>
                 </div>
                             <div class="feature-item">
                                 <i class="fas fa-university"></i>
@@ -209,26 +210,26 @@
             <div class="career-title">Your Path to a Rewarding Career</div>
             <div class="program-title">Diverse Nursing Programs</div>
             <div class="program-section">
+                <div class="program-image" data-aos="zoom-in" data-aos-delay="400">
+                    <img src="/images/14.jpg" alt="Nursing students in lab" class="floating">
+                </div>
                 <div class="program-info">
                     <p>Our BSc and GNM programs are designed to equip students with cutting-edge skills for a successful nursing career.</p>
                     <div class="features">
-                        <div class="feature" data-aos="fade-right" data-aos-delay="200">
+                        <div class="feature" data-aos="fade-left" data-aos-delay="200">
                             <div class="feature-icon"></div>
                             <h3>Comprehensive curriculum with hands-on training</h3>
                         </div>
-                        <div class="feature" data-aos="fade-right" data-aos-delay="400">
+                        <div class="feature" data-aos="fade-left" data-aos-delay="400">
                             <div class="feature-icon"></div>
                             <h3>World-class faculty dedicated to your success</h3>
                         </div>
-                        <div class="feature" data-aos="fade-right" data-aos-delay="600">
+                        <div class="feature" data-aos="fade-left" data-aos-delay="600">
                             <div class="feature-icon"></div>
                             <h3>State-of-the-art simulation labs and equipment</h3>
                         </div>
                     </div>
                     <button class="program-button" data-aos="bounce-in" data-aos-delay="800">Learn More</button>
-                </div>
-                <div class="program-image" data-aos="zoom-in" data-aos-delay="400">
-                    <img src="/images/14.jpg" alt="Nursing students in lab" class="floating">
                 </div>
             </div>
         </div>
@@ -784,7 +785,7 @@
                 </div>
             </div>
             
-            <!-- Map Container -->
+            <!-- Map Container
             <div class="row mt-5">
                 <div class="col-12" data-aos="fade-up">
                     <div class="map-container">
@@ -792,7 +793,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <!-- Leaflet CSS -->
@@ -936,10 +937,26 @@
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="400">
                     <h3>Contact Info</h3>
                     <div class="footer-contact">
-                        <p><i class="fas fa-phone"></i> <a href="tel:+917013370612">+91 7013370612</a></p>
-                        <p><i class="fas fa-phone"></i> <a href="tel:+919989953273">+91 9989953273</a></p>
-                        <p><i class="fas fa-envelope"></i> <a href="mailto:Schoolofnursing10@gmail.com">Schoolofnursing10@gmail.com</a></p>
-                        <p><i class="fas fa-map-marker-alt"></i> Balaji Villas, Kalyana Durgam Road, AP 515004</p>
+                        <a href="tel:+917013370612" class="footer-contact-btn">
+                            <i class="fas fa-phone"></i>
+                            <span>+91 7013370612</span>
+                            <i class="fas fa-phone-alt"></i>
+                        </a>
+                        <a href="tel:+919989953273" class="footer-contact-btn">
+                            <i class="fas fa-phone"></i>
+                            <span>+91 9989953273</span>
+                            <i class="fas fa-phone-alt"></i>
+                        </a>
+                        <a href="mailto:Schoolofnursing10@gmail.com" class="footer-contact-btn footer-email-btn">
+                            <i class="fas fa-envelope"></i>
+                            <span>Schoolofnursing10@gmail.com</span>
+                            <i class="fas fa-paper-plane"></i>
+                        </a>
+                        <a href="https://maps.app.goo.gl/dd2vSjdpd3iEM7c77" target="_blank" class="footer-address-btn">
+                            <i class="fas fa-map-marker-alt"></i> 
+                            <span>Balaji Villas, Kalyana Durgam Road, AP 515004</span>
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
                     </div>
                 </div>
             </div>
